--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,11 @@ SQLAlchemy==1.3.23
 SQLAlchemy-Utils==0.36.8
 Werkzeug==1.0.1
 wtforms_sqlalchemy
+
+bcrypt==3.2.0
+cffi==1.14.4
+Flask-Bcrypt==0.7.1
+Flask-Login==0.5.0
+Flask-WTF==0.14.3
+pycparser==2.20
+WTForms==2.3.3
